--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -7,4 +7,4 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v3
       - name: Say hello world!   
-      - run: echo "$(cat hello_world.txt)"
+        run: echo "$(cat hello_world.txt)"
